feat: add configurable overcurrent mode for peak-billing scenarios
Add option to disable temporary overcurrent tolerance for users with
peak-based billing contracts or strict grid connection agreements.

Changes:
- Add "Allow temporary overcurrent" option in runtime configuration
- Implement OvercurrentMode enum (CONSERVATIVE/OPTIMISED)
- Conservative mode: immediate reduction on overcurrent detection
- Optimised mode (default): risk-based algorithm with spike tolerance
- Add 7 comprehensive tests for both modes (100% coverage)
- Update README with mode descriptions and use cases

Addresses #34

--- a/custom_components/evse_load_balancer/translations/en.json
+++ b/custom_components/evse_load_balancer/translations/en.json
@@ -36,7 +36,11 @@
                 "title": "EVSE Load Balancer Options",
                 "data": {
                     "charge_limit_hysteresis": "Hysteresis (Minutes)",
-                    "max_fuse_load_amps": "Max Fuse Load Override (A)"
+                    "max_fuse_load_amps": "Max Fuse Load Override (A)",
+                    "allow_temporary_overcurrent": "Allow temporary overcurrent"
+                },
+                "data_description": {
+                    "allow_temporary_overcurrent": "When enabled, tolerates brief power spikes using risk-based algorithm. Disable for contracts with peak billing or strict overcurrent restrictions."
                 },
                 "description": "Adjust how many minutes the load balancer should wait before increasing a charger's limit. For 'Max Fuse Load Override', an empty value means no override and the initial main fuse size will be used."
             }
